--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <header class="header">
             <img src="logo1.jpg" alt="logo" height="60px" width="80px" />
             <h1 class="title">Spark Tech Hub</h1>
-            <button class="signin"><h2 class="sign">Sign In</h2><i class="fa-solid fa-user"></i></button>
+            <a class="signin " href="login.html" style="text-decoration: none;"><button class="sig" style="text-decoration: none;"><h2 class="sign " style="margin-left: 6px; ">Sign In</h2><i class="fa-solid fa-user ic mx-auto" ></i></button></a>
         </header>
         <div class="topnav position-static">
             <a class="links">Home</a>
@@ -30,7 +30,7 @@
       <div id="carouselExample" class="carousel slide bg-black" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="car3.jpg" class="car d-block w-75" alt="..." data-bs-interval="3000">
+            <img src="car3.jpg"  class="car d-block w-75" alt="..." data-bs-interval="3000">
             <div class="centered text-white"><p class="text-center">DREAM. DISCOVER. DELIVER</p></div>
          
           </div>
