--- a/login.html
+++ b/login.html
@@ -55,6 +55,9 @@
                     <h1>Hello, Friend!</h1>
                     <p>Register with your personal details</p>
                     <button class="hidden" id="register">Sign Up</button>
+                    <p>Wanna hire the best talents?<br><a href="iwp.html" style="text-decoration: none; color: white;">
+                        Click here
+                    </a></p>
                 </div>
             </div>
         </div>
