--- a/login.html
+++ b/login.html
@@ -55,7 +55,7 @@
                     <h1>Hello, Friend!</h1>
                     <p>Register with your personal details</p>
                     <button class="hidden" id="register">Sign Up</button>
-                    <p>Wanna hire the best talents?<br><a href="iwp.html" style="text-decoration: none; color: white;">
+                    <p>Wanna hire the best talents?<br><br><a href="iwp.html" style="text-decoration: none; color: white;">
                         Click here
                     </a></p>
                 </div>
