--- a/iwp.html
+++ b/iwp.html
@@ -49,7 +49,7 @@
                 <div class="toggle-panel toggle-left">
                     <h1>Welcome Back! Ready to Excel?</h1>
                     <p>Enter your personal details</p>
-                    <button class="hidden" id="login">Sign In</button>
+                    <button class="hidden" id="login"><a href="index2.html" style="text-decoration: none; color: white;">Sign In</a></button>
                 </div>
                 <div class="toggle-panel toggle-right">
                     <h1>Hire the Elite to build something Extraordinary!</h1>
